--- a/portal-frontend/src/app/features/edit-submission/proposal/tur-proposal/tur-proposal.component.html
+++ b/portal-frontend/src/app/features/edit-submission/proposal/tur-proposal/tur-proposal.component.html
@@ -116,9 +116,7 @@
     </div>
     <div class="full-row">
       <label for="total-area">Total area of corridor</label>
-      <div>
-        <mat-hint class="subtext">Enter area in hectares (ha) (Note: 0.01 ha is 100 m<sup>2</sup>)</mat-hint>
-      </div>
+      <div class="subtext">Enter area in hectares (ha) (Note: 0.01 ha is 100 m<sup>2</sup>)</div>
       <mat-form-field appearance="outline">
         <input
           [formControl]="totalCorridorArea"
