--- a/alcs-frontend/src/app/shared/inline-editors/inline-textarea/inline-textarea.component.scss
+++ b/alcs-frontend/src/app/shared/inline-editors/inline-textarea/inline-textarea.component.scss
@@ -60,7 +60,6 @@
 .editable {
   width: 100%;
   display: inline-block;
-  cursor: pointer;
   border: 2px solid colors.$primary-color-dark;
   padding: 8px;
   border-radius: 2px;
@@ -69,4 +68,5 @@
   min-height: 96px;
   margin-left: -8px;
   margin-right: -8px;
+  background: none;
 }
