--- a/portal-frontend/src/app/features/edit-submission/proposal/roso-proposal/roso-proposal.component.html
+++ b/portal-frontend/src/app/features/edit-submission/proposal/roso-proposal/roso-proposal.component.html
@@ -26,23 +26,20 @@
   <div class="form-row">
     <div class="full-row">
       <label for="noi-follow-up">
-        Are you submitting this application as a follow-up to an ALC Notice of Intent (NOI)?
+        Has the ALC previously received an application or Notice of Intent for this proposal?
       </label>
-      <div class="subtext">
-        If yes, please provide your NOI ID in the field below. Only applicants who have submitted a NOI to the ALC will
-        have a NOI ID.
-      </div>
+      <div class="subtext">If yes, provide the ALC Application or Notice of Intent ID in the field below</div>
       <div>
         <mat-button-toggle-group
           class="input"
-          (valueChange)="onChangeNOI($event)"
+          (valueChange)="onChangeIsFollowUp($event)"
           id="noi-follow-up"
-          formControlName="isNOIFollowUp"
+          [formControl]="isFollowUp"
         >
           <mat-button-toggle
             class="toggle-button"
             [ngClass]="{
-              'error-outline': isNOIFollowUp.invalid && (isNOIFollowUp.dirty || isNOIFollowUp.touched)
+              'error-outline': isFollowUp.invalid && (isFollowUp.dirty || isFollowUp.touched)
             }"
             value="true"
             >Yes
@@ -50,7 +47,7 @@
           <mat-button-toggle
             class="toggle-button"
             [ngClass]="{
-              'error-outline': isNOIFollowUp.invalid && (isNOIFollowUp.dirty || isNOIFollowUp.touched)
+              'error-outline': isFollowUp.invalid && (isFollowUp.dirty || isFollowUp.touched)
             }"
             value="false"
             >No
@@ -59,55 +56,15 @@
       </div>
     </div>
     <div class="full-row">
-      <label for="NOIIDs">Notice of Intent (NOI) ID</label>
-      <div class="subtext">If you have multiple NOI IDs, please separate with a comma.</div>
+      <label for="followUpIds">Application or NOI ID</label>
+      <div class="subtext">If you have multiple IDs, please separate with a comma.</div>
       <mat-form-field appearance="outline">
-        <input type="text" formControlName="NOIIDs" id="NOIIDs" matInput />
+        <input type="text" [formControl]="followUpIds" id="followUpIds" matInput />
       </mat-form-field>
 
-      <div *ngIf="NOIIDs.invalid && (NOIIDs.dirty || NOIIDs.touched)" class="field-error">
+      <div *ngIf="followUpIds.invalid && (followUpIds.dirty || followUpIds.touched)" class="field-error">
         <mat-icon>warning</mat-icon>
-        <div *ngIf="NOIIDs.errors?.['required']">This field is required</div>
-      </div>
-    </div>
-    <div class="full-row">
-      <label for="application-follow-up">Does this proposal have previous ALC authorization?</label>
-      <div class="subtext">If yes, please provide the ALC Application ID in the field below.</div>
-      <div>
-        <mat-button-toggle-group
-          class="input"
-          (valueChange)="onChangeALCAuthorization($event)"
-          id="application-follow-up"
-          formControlName="hasALCAuthorization"
-        >
-          <mat-button-toggle
-            class="toggle-button"
-            [ngClass]="{
-              'error-outline': hasALCAuthorization.invalid && (hasALCAuthorization.dirty || hasALCAuthorization.touched)
-            }"
-            value="true"
-            >Yes
-          </mat-button-toggle>
-          <mat-button-toggle
-            class="toggle-button"
-            [ngClass]="{
-              'error-outline': hasALCAuthorization.invalid && (hasALCAuthorization.dirty || hasALCAuthorization.touched)
-            }"
-            value="false"
-            >No
-          </mat-button-toggle>
-        </mat-button-toggle-group>
-      </div>
-    </div>
-    <div class="full-row">
-      <label for="application-id">Application ID</label>
-      <div class="subtext">If you have multiple Application IDs, please separate with a comma.</div>
-      <mat-form-field appearance="outline">
-        <input type="text" formControlName="applicationIDs" id="application-id" matInput />
-      </mat-form-field>
-      <div *ngIf="applicationIDs.invalid && (applicationIDs.dirty || applicationIDs.touched)" class="field-error">
-        <mat-icon>warning</mat-icon>
-        <div *ngIf="applicationIDs.errors?.['required']">This field is required</div>
+        <div *ngIf="followUpIds.errors?.['required']">This field is required</div>
       </div>
     </div>
     <div class="full-row">
@@ -139,9 +96,7 @@
         Commission will consider your proposal dimensions when determining the potential impact it will have on the
         agricultural capability of the land.
       </div>
-      <app-info-banner>
-        Please refer to <a>FIXME: Contact Us</a> on the ALC website for more detail.
-      </app-info-banner>
+      <app-info-banner> Please refer to <a>FIXME: Contact Us</a> on the ALC website for more detail. </app-info-banner>
       <app-soil-table
         tableHeader="Soil to be Removed"
         [(data)]="removalTableData"
