--- a/portal-frontend/src/app/features/view-submission/lfng-review/lfng-review.component.html
+++ b/portal-frontend/src/app/features/view-submission/lfng-review/lfng-review.component.html
@@ -233,15 +233,6 @@
             <app-no-data *ngIf="applicationReview.isAuthorized === null"></app-no-data>
           </div>
         </div>
-        <div *ngIf="applicationReview.isFirstNationGovernment" class="full-width">
-          <div class="subheading2">Resolution for Application to Proceed to the ALC</div>
-          <div>
-            <span *ngIf="applicationReview.isAuthorized !== null">{{
-              applicationReview.isAuthorized ? 'Authorized' : 'Refuse to Authorize'
-            }}</span>
-            <app-no-data *ngIf="!applicationReview.isAuthorized"></app-no-data>
-          </div>
-        </div>
       </div>
     </section>
     <section>
@@ -266,6 +257,7 @@
               document.fileName
             }}</a>
           </div>
+          <app-no-data *ngIf="resolutionDocument.length === 0"></app-no-data>
         </div>
         <div *ngIf="applicationReview.isOCPDesignation || applicationReview.isSubjectToZoning">
           <div class="subheading2">
@@ -276,6 +268,7 @@
               document.fileName
             }}</a>
           </div>
+          <app-no-data *ngIf="staffReport.length === 0"></app-no-data>
         </div>
         <div class="full-width">
           <div class="subheading2">Other Attachments (optional):</div>
