--- a/alcs-frontend/src/app/features/application/decision/conditions/condition/condition.component.html
+++ b/alcs-frontend/src/app/features/application/decision/conditions/condition/condition.component.html
@@ -84,16 +84,16 @@
         <div class="subheading2">Plan numbers</div>
         <ng-container *ngFor="let lot of subdComponent.lots; let i = index">
           <div>
-            {{ lot.number }}
-            <app-no-data *ngIf="lot.number === null || lot.number === undefined"></app-no-data>
+            {{ lot.index }}
+            <app-no-data *ngIf="lot.index === null || lot.index === undefined"></app-no-data>
           </div>
           <div>
             {{ lot.type }}
-            <app-no-data *ngIf="lot.type === null || lot.number === undefined"></app-no-data>
+            <app-no-data *ngIf="lot.type === null || lot.type === undefined"></app-no-data>
           </div>
           <div>
             {{ lot.size }}
-            <app-no-data *ngIf="lot.size === null || lot.number === undefined"></app-no-data>
+            <app-no-data *ngIf="lot.size === null || lot.size === undefined"></app-no-data>
           </div>
           <div>
             <app-inline-textarea
